--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
@@ -49,6 +49,7 @@
           <div class="user-id-options">
             <ejs-radiobutton label="GUID" name="UserID" value="guid" cssClass="e-info" (change)="onRadioChange($event)" checked="true"></ejs-radiobutton>
             <ejs-radiobutton label="Email" name="UserID" value="email" cssClass="e-info" (change)="onRadioChange($event)"></ejs-radiobutton>
+            <ejs-radiobutton label="Region" name="UserID" value="region" cssClass="e-info" (change)="onRadioChange($event)"></ejs-radiobutton>
           </div>
         </div>
         
@@ -58,7 +59,6 @@
               <th rowspan="2">Tenants</th>
               <th>User Email</th>
               <th>Password</th>
-              <th>Role</th>
               <th>Custom Attribute</th>
               <th style="min-width: 300px;">Filter Parameter</th>
             </tr>
@@ -68,106 +68,88 @@
               <td rowspan="4">Alpha Electronics</td>
               <td>emily@alphaelectronics.com</td>
               <td>emily@123</td>
-              <td>Admin</td>
               <td rowspan="4">"sales_analysis_db" : "alpha_electronics_sales_analysis"</td>
-              <td>nill</td>
+              <td>All</td>
             </tr>
             <tr>
               <td>john@alphaelectronics.com</td>
               <td>john@123</td>
-              <td>Manager</td>
               <td class="filter-param">user_guid = "5a216f53-416c-46ba-805c-2724dd8c738c"</td>
             </tr>
             <tr>
               <td>sarah@alphaelectronics.com</td>
               <td>sarah@123</td>
-              <td>Sales</td>
               <td class="filter-param">user_guid = "24265a26-320f-426a-9d30-f9db439e1363"</td>
             </tr>
             <tr>
               <td>michel@alphaelectronics.com</td>
               <td>michael@123</td>
-              <td>Support</td>
               <td class="filter-param">user_guid = "864f0a43-2235-4418-984e-7c1b0fea0a1a"</td>
             </tr>
-            <tbody>
               <tr>
                 <td rowspan="4">Beta Enterprises</td>
                 <td>david.miller@betaenterprises.com</td>
                 <td>David@202</td>
-                <td>Admin</td>
                 <td rowspan="4">"sales_analysis_db" : "beta_enterprises_sales_analysis"</td>
-                <td>nill</td>
+                <td>All</td>
               </tr>
               <tr>
                 <td>lisa@betaenterprises.com</td>
                 <td>Lisa@303</td>
-                <td>Manager</td>
                 <td class="filter-param">user_guid = "526384c4-2b16-4fef-9a7a-e7203481c513"</td>
               </tr>
               <tr>
                 <td>chris@betaenterprises.com</td>
                 <td>chris.white@123</td>
-                <td>Sales</td>
                 <td class="filter-param">user_guid = "98accd79-8f09-4456-a2b8-ba981c4a99d4"</td>
               </tr>
               <tr>
                 <td>sophia@betaenterprises.com</td>
                 <td>Sophia@1213</td>
-                <td>Support</td>
                 <td class="filter-param">user_guid = "b946e1ad-c611-40f0-bc66-13ca4689d7e2"</td>
               </tr>
-              <tbody>
                 <tr>
                   <td rowspan="4">Gamma Industries</td>
                   <td>jessica@gammaindustries.com</td>
                   <td>jessica@505</td>
-                  <td>Admin</td>
                   <td rowspan="4">"sales_analysis_db" : "gamma_industries_sales_analysis"</td>
-                  <td>nill</td>
+                  <td>All</td>
                 </tr>
                 <tr>
                   <td>matthew@gammaindustries.com</td>
                   <td>matthew@606</td>
-                  <td>Manager</td>
                   <td class="filter-param">user_guid = "aa116681-5c8c-4f8e-a87e-fb938ce9d743"</td>
                 </tr>
                 <tr>
                   <td>amanda@gammaindustries.com</td>
                   <td>amanda@707</td>
-                  <td>Support</td>
                   <td class="filter-param">user_guid = "e39ab2a3-eccf-4141-a7ed-e175ede04440"</td>
                 </tr>
                 <tr>
                   <td>kevin@gammaindustries.com</td>
                   <td>kevin@808</td>
-                  <td>Sales</td>
                   <td class="filter-param">user_guid = "dd2de469-ad77-4f52-8d2a-41881152369c"</td>
                 </tr>
                 <tr>
                   <td rowspan="4">Delta Industries</td>
                   <td>rachel.adams@deltaindustries.com</td>
                   <td>rachel@909</td>
-                  <td>Admin</td>
                   <td rowspan="4">"sales_analysis_db" : "delta_industries_sales_analysis"</td>
-                  <td>nill</td>
+                  <td>All</td>
                 </tr>
                 <tr>
                   <td>james.wilson@deltaindustries.com</td>
                   <td>James@123</td>
-                  <td>Manager</td>
                   <td class="filter-param">user_guid = "6a9ec9a3-7fee-411b-85a9-f2e9e8d2e055"</td>
                 </tr>
                 <tr>
                   <td>olivia.martin@deltaindustries.com</td>
                   <td>olivia@5678</td>
-                  <td>Support</td>
                   <td class="filter-param">user_guid = "7ea9d145-cda4-43a5-8c6f-6f68fc53aeb8"</td>
                 </tr>
                 <tr>
                   <td>robert.jones@deltaindustries.com</td>
                   <td>robert@1234</td>
-                  <td>Sales</td>
                   <td class="filter-param">user_guid = "1c43d130-077e-46c2-b50f-78c80bc747fa"</td>
                 </tr>
           </tbody>
