--- a/Scenario Based Samples/AnonymousUser/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/AnonymousUser/web-client/src/app/login/login.component.html
@@ -5,15 +5,12 @@
   <div class="child-div" style="width: 325px;">
     <h2 class="login-header">Login</h2>
     <form (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="useremail" style="display: block; font-weight: bold;">User email</label>
-        <input
-            type="text"
-            id="username"
-            name="username"
-            [(ngModel)]="username"
-            required
-          />
+      <label for="useremail" style="display: block; font-weight: bold;">User email</label>
+      <div>
+        <!-- <ejs-combobox id='useremail' #sample [dataSource]='userData' name="useremail" [fields]='fields' [(ngModel)]="selectedUser" [popupHeight]='height' [placeholder]="'Select the User email address'" (change)="onUserChange($event)"></ejs-combobox> -->
+        <ejs-combobox id='useremail' #sample [dataSource]='filteredData' name="useremail" [fields]='fields' [(ngModel)]="selectedUser" [popupHeight]='height' [placeholder]="'Select the User email address'" (change)="onUserChange($event)" allowFiltering="true"
+        (filtering)="onFiltering($event)"></ejs-combobox>
+
       </div>
       <div class="form-group">
         <label for="password">Password</label>
@@ -25,42 +22,17 @@
           required
         />
       </div>
+
       <button type="submit" class="login-button">Login</button>
     </form>
     <div class="error-message" *ngIf="loginError">{{ loginError }}</div>
     <div class="site-description">
       <p>By leveraging the anonymous user in the embedding application, we have 4 set of anonymous user for each group and accessing the dashbord. Please refer the table for anonymous user with group details.</p>
     </div>
-    <!-- <div *ngIf="showPopup" class="popup-overlay">
-      <div class="popup-content">
-        <button type="button" class="close-btn" (click)="closePopup()">✖</button>
-        <h3 class="popup-header">Flow Diagram - Custom Attribute</h3>
-        <img src="../../assets/custom-attribute-workflow.jpg" alt="Workflow Diagram" class="popup-image" />
-      </div>
-    </div> -->
-    
-    <!-- <div class="button-container">
-      <button type="button" class="btn btn-primary show-popup-btn advanced-btn" (click)="openPopup()">
-    <span class="icon-container">
-      <i class="fas fa-project-diagram"></i>
-    </span>
-    Show Workflow Diagram
-  </button>
-    </div> -->
   </div>
   <hr class="divider">
     <div class="small text-secondary mt-3 d-none d-sm-flex">
       <div class="credentials" style="width: 100%;">
-        <!-- <div class="user-id-selection">
-          <label class="user-id-label">User ID :</label>
-          <div class="user-id-options">
-            <ejs-radiobutton label="GUID" name="UserID" value="guid" cssClass="e-info" (change)="onRadioChange($event)" checked="true"></ejs-radiobutton>
-            <ejs-radiobutton label="Email" name="UserID" value="email" cssClass="e-info" (change)="onRadioChange($event)"></ejs-radiobutton>
-          </div>
-        </div> -->
-        <!-- <div>
-          <input id="element" type="checkbox"/> Invalid Group name
-      </div> -->
       <div class="toggle">
         <input id="switch1" type="checkbox"/> No Group name  
       </div> &nbsp;
@@ -70,8 +42,6 @@
       <div class="toggle">
         <input id="switch3" type="checkbox"/> Invalid Group name 
       </div>
-      
-
         <table>
           <thead>
             <tr>
@@ -88,9 +58,9 @@
 
           <tbody>
             <tr>
-              <td>anuabarna.b@syncfusion.com (BoldBI User)</td>
+              <td>demo@boldbi.com (BoldBI User)</td>
               <!-- <td>{{ !isuserEmailColumnVisible ? 'anuabarna.b@syncfusion.com (BoldBI User)' : '' }}</td> -->
-              <td>Anu@123</td>
+              <td>Demo@123</td>
               <!-- <td>3</td> -->
               <td>Admin</td>
               <!-- <td *ngIf="isgroupNameColumnVisible">Alpha</td> -->
@@ -105,43 +75,24 @@
               <td>emily@alphaelectronics.com</td>
               <!-- <td>{{ !isuserEmailColumnVisible ? 'emily@alphaelectronics.com' : '' }}</td> -->
               <td>Emily@123</td>
-              <!-- <td>3</td> -->
               <td>Admin</td>
-              <!-- <td>Alpha</td> -->
               <td>{{ !isgroupNameColumnVisible ? 'Alpha' : '' }}</td> <!-- Show empty if switch is OFF -->
-              <!-- <td>76d28df5-c3c3-4abe-b415-28b89d5dd94d</td> -->
-              <!-- <td>Region = All</td> -->
-               <td>Dashboard Viewer - Supply Chain Performance Dashboard</td>
+              <td>Dashboard Viewer - Supply Chain Performance Dashboard</td>
             </tr>
             <tr>
               <td>john@betaelectronics.com</td>
               <!-- <td>{{ !isuserEmailColumnVisible ? 'john@betaelectronics.com' : '' }}</td> -->
               <td>John@123</td>
-              <!-- <td>4</td> -->
               <td>General Manager 1</td>
-              <!-- <td>Beta</td> -->
               <td>{{ !isgroupNameColumnVisible ? 'Beta' : '' }}</td> <!-- Show empty if switch is OFF -->
-              <!-- <td>d0486b92-d279-492a-94bc-a2c4b643c1cd</td> -->
-              <!-- <td>Region = East and West</td> -->
               <td>Dashboard Designer(Item will not log in table) - Supply Chain Performance Dashboard</td>
             </tr>
-            <!-- <tr>
-              <td>john@betaindustry.com</td>
-              <td>John@1234</td>
-              <td>4</td>
-              <td>Beta</td>
-              <td>28d7cecb-fdc4-4665-9336-8dbfc0866101</td>
-            </tr> -->
             <tr>
               <td>sarah@gammaelectronics.com</td>
               <!-- <td>{{ !isuserEmailColumnVisible ? 'sarah@gammaelectronics.com' : '' }}</td>  -->
               <td>Sarah@123</td>
-              <!-- <td>5</td> -->
               <td>General Manager 2</td>
-              <!-- <td>Gamma</td> -->
               <td>{{ !isgroupNameColumnVisible ? 'Gamma' : '' }}</td> <!-- Show empty if switch is OFF -->
-              <!-- <td>28d7cecb-fdc4-4665-9336-8dbfc0866101</td> -->
-              <!-- <td>Region = North and South</td> -->
               <td>Custom Attribute => "sales_analysis_db":"gamma_industries_sales_analysis"</td>
             </tr>
             <tr>
@@ -149,25 +100,11 @@
               <!-- <td>{{ !isuserEmailColumnVisible ? 'michel@deltaelectronics.com' : '' }}</td> -->
               <td>Micael@123</td>
               <td>Sales 1</td>
-              <!-- <td>Delta</td> -->
               <td>{{ !isgroupNameColumnVisible ? 'Delta' : '' }}</td> <!-- Show empty if switch is OFF -->
               <td>No permission for Dashboard</td>
             </tr>
-             <!--<tr>
-              <td>richard@dellelectronics.com</td>
-              <td>Richard@123</td>
-              <td>6</td>
-              <td>Sales 2</td>
-              <td>Delta</td>
-              <td>bd4107e2-78a4-451e-89f8-730317cbfefb</td>
-              <td>Region = South</td>
-              <td>w</td>
-            </tr> -->
           </tbody>
-        </table>
-
-       
-        
+        </table>    
       </div>
     </div>
 </div>
