--- a/Scenario Based Samples/AnonymousUser/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/AnonymousUser/web-client/src/app/login/login.component.html
@@ -47,63 +47,20 @@
             <tr>
               <th>User Email</th>
               <th>Password</th>
-              <!-- <th>Group Id</th> -->
               <th>Role</th>
               <th>Group Name</th>
-              <!-- <th>Dashboard Id</th> -->
-              <!-- <th>Custom attribute</th> -->
                <th>Access</th>
             </tr>
           </thead>
-
           <tbody>
-            <tr>
-              <td>demo@boldbi.com (BoldBI User)</td>
-              <!-- <td>{{ !isuserEmailColumnVisible ? 'anuabarna.b@syncfusion.com (BoldBI User)' : '' }}</td> -->
-              <td>Demo@123</td>
-              <!-- <td>3</td> -->
-              <td>Admin</td>
-              <!-- <td *ngIf="isgroupNameColumnVisible">Alpha</td> -->
-              <td>{{ !isgroupNameColumnVisible ? 'Alpha' : '' }}</td>
-              <!-- <td>{{ (!isgroupNameColumnVisible && !isInvalidGroupNameColumn) ? 'Alpha' : (!isInvalidGroupNameColumn ? '' : 'dfdfdfd') }}</td> -->
-
-              <!-- <td>76d28df5-c3c3-4abe-b415-28b89d5dd94d</td> -->
-              <!-- <td>Region = All</td> -->
-               <td>Dashboard Viewer - Sales Analysis Dashboard</td>
-            </tr>
-            <tr>
-              <td>emily@alphaelectronics.com</td>
-              <!-- <td>{{ !isuserEmailColumnVisible ? 'emily@alphaelectronics.com' : '' }}</td> -->
-              <td>Emily@123</td>
-              <td>Admin</td>
-              <td>{{ !isgroupNameColumnVisible ? 'Alpha' : '' }}</td> <!-- Show empty if switch is OFF -->
-              <td>Dashboard Viewer - Supply Chain Performance Dashboard</td>
-            </tr>
-            <tr>
-              <td>john@betaelectronics.com</td>
-              <!-- <td>{{ !isuserEmailColumnVisible ? 'john@betaelectronics.com' : '' }}</td> -->
-              <td>John@123</td>
-              <td>General Manager 1</td>
-              <td>{{ !isgroupNameColumnVisible ? 'Beta' : '' }}</td> <!-- Show empty if switch is OFF -->
-              <td>Dashboard Designer(Item will not log in table) - Supply Chain Performance Dashboard</td>
-            </tr>
-            <tr>
-              <td>sarah@gammaelectronics.com</td>
-              <!-- <td>{{ !isuserEmailColumnVisible ? 'sarah@gammaelectronics.com' : '' }}</td>  -->
-              <td>Sarah@123</td>
-              <td>General Manager 2</td>
-              <td>{{ !isgroupNameColumnVisible ? 'Gamma' : '' }}</td> <!-- Show empty if switch is OFF -->
-              <td>Custom Attribute => "sales_analysis_db":"gamma_industries_sales_analysis"</td>
-            </tr>
-            <tr>
-              <td>michel@deltaelectronics.com</td>
-              <!-- <td>{{ !isuserEmailColumnVisible ? 'michel@deltaelectronics.com' : '' }}</td> -->
-              <td>Micael@123</td>
-              <td>Sales 1</td>
-              <td>{{ !isgroupNameColumnVisible ? 'Delta' : '' }}</td> <!-- Show empty if switch is OFF -->
-              <td>No permission for Dashboard</td>
-            </tr>
-          </tbody>
+          <tr *ngFor="let user of userData;">
+            <td>{{ user.email }}</td>
+            <td>{{ user.password }}</td>
+            <td>{{ user.role }}</td>
+            <td>{{ user.groupName }}</td>
+            <td>{{ user.access }}</td>
+          </tr>
+        </tbody>
         </table>    
       </div>
     </div>
