revamped sample by passing custom attribute dynamically, table structure, make toggle default value false,

--- a/Scenario Based Samples/AnonymousUser/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/AnonymousUser/web-client/src/app/login/login.component.html
@@ -53,8 +53,9 @@
             </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let user of userData;">
-            <td>{{ user.email }}</td>
+          <tr *ngFor="let user of userData; let i = index">
+            <td>{{ user.email }}<span *ngIf="i === 0"> (BoldBI user)</span></td>
+            <!-- <td>{{ user.email }}</td> -->
             <td>{{ user.password }}</td>
             <td>{{ user.role }}</td>
             <td>{{ user.groupName }}</td>
