--- a/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
+++ b/Scenario Based Samples/JWTTokenWithDataSourceFilter/web-client/src/app/login/login.component.html
@@ -1,161 +1,190 @@
 <!-- login.component.html -->
-<link href="https://cdn.syncfusion.com/ej2/28.1.33/fluent.css" rel="stylesheet"/> 
+<link href="https://cdn.syncfusion.com/ej2/28.1.33/fluent.css" rel="stylesheet"/>
+<div class="login-component">
 <div class="login-container">
-  <div class="child-div" style="width: 325px;">
-    <h2 class="login-header">Login</h2>
-    <form (ngSubmit)="onSubmit()">
-      <label for="useremail" style="display: block; font-weight: bold;">User email</label>
-      <div>
-        <ejs-combobox id='games' #sample [dataSource]='userData' [fields]='fields'  [(value)]="selectedUser" [popupHeight]='height' [placeholder]="'Select the User email address'" (change)="onUserChange($event)"></ejs-combobox>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          [(ngModel)]="password"
-          required
-        />
-      </div>
-      <button type="submit" class="login-button">Login</button>
-    </form>
-    <div class="error-message" *ngIf="loginError">{{ loginError }}</div>
-    <div class="site-description">
-      <p>By leveraging the custom attribute in the embedding application, we have 4 set of database for each tenant and passing the filter access department-specific data. The Admin of each tenant gains insights of all data and other can access their specific data. Please refer the table for custom attributes and filter values.</p>
+  <div class="left-container">
+    <!-- <img src="/assets/Boldbi.svg" alt="Band Logo" class="boldbi-logo">
+    <div class="welcome-text">
+      Welcome to <span class="boldbi-text">BoldBI</span>
     </div>
-    <div *ngIf="showPopup" class="popup-overlay">
-      <div class="popup-content">
-        <button type="button" class="close-btn" (click)="closePopup()">✖</button>
-        <h3 class="popup-header">Flow Diagram - Custom Attribute</h3>
-        <img src="../../assets/custom-attribute-workflow.jpg" alt="Workflow Diagram" class="popup-image" />
+    <p style="font-weight: bold;">by Syncfusion</p> -->
+    <div class="small text-secondary mt-3 d-none d-sm-flex"> 
+      <div class="credentials minimized">
+        <div class="scrollable-table" id="tableContainer">
+          <table>
+            <thead>
+              <tr>
+                <th rowspan="2">Tenants</th>
+                <th style="min-width: 95px;">User Name</th>
+                <th>Password</th>
+                <th style="min-width: 306px;">Custom Attribute</th>
+                <th style="min-width: 300px;">Filter Parameter</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td rowspan="4">Alpha Electronics</td>
+                <td>Emily</td>
+                <td>emily@123</td>
+                <td rowspan="4">"sales_analysis_db" : "alpha_electronics_sales_analysis"</td>
+                <td>nill</td>
+              </tr>
+              <tr>
+                <td>John</td>
+                <td>john@123</td>
+                <td class="filter-param">user_guid = "5a216f53-416c-46ba-805c-2724dd8c738c"</td>
+              </tr>
+              <tr>
+                <td>Sarah</td>
+                <td>sarah@123</td>
+                <td class="filter-param">user_guid = "24265a26-320f-426a-9d30-f9db439e1363"</td>
+              </tr>
+              <tr>
+                <td>Michel</td>
+                <td>michael@123</td>
+                <td class="filter-param">user_guid = "864f0a43-2235-4418-984e-7c1b0fea0a1a"</td>
+              </tr>
+              <tbody>
+                <tr>
+                  <td rowspan="4">Beta Enterprises</td>
+                  <td>David</td>
+                  <td>David@202</td>
+                  <td rowspan="4">"sales_analysis_db" : "beta_enterprises_sales_analysis"</td>
+                  <td>nill</td>
+                </tr>
+                <tr>
+                  <td>Lisa</td>
+                  <td>Lisa@303</td>
+                  <td class="filter-param">user_guid = "526384c4-2b16-4fef-9a7a-e7203481c513"</td>
+                </tr>
+                <tr>
+                  <td>Chris</td>
+                  <td>chris.white@123</td>
+                  <td class="filter-param">user_guid = "98accd79-8f09-4456-a2b8-ba981c4a99d4"</td>
+                </tr>
+                <tr>
+                  <td>Sophia</td>
+                  <td>Sophia@1213</td>
+                  <td class="filter-param">user_guid = "b946e1ad-c611-40f0-bc66-13ca4689d7e2"</td>
+                </tr>
+                <tbody>
+                  <tr>
+                    <td rowspan="4">Gamma Industries</td>
+                    <td>Jessica</td>
+                    <td>jessica@505</td>
+                    <td rowspan="4">"sales_analysis_db" : "gamma_industries_sales_analysis"</td>
+                    <td>nill</td>
+                  </tr>
+                  <tr>
+                    <td>Matthew</td>
+                    <td>matthew@606</td>
+                    <td class="filter-param">user_guid = "aa116681-5c8c-4f8e-a87e-fb938ce9d743"</td>
+                  </tr>
+                  <tr>
+                    <td>Amanda</td>
+                    <td>amanda@707</td>
+                    <td class="filter-param">user_guid = "e39ab2a3-eccf-4141-a7ed-e175ede04440"</td>
+                  </tr>
+                  <tr>
+                    <td>Kevin</td>
+                    <td>kevin@808</td>
+                    <td class="filter-param">user_guid = "dd2de469-ad77-4f52-8d2a-41881152369c"</td>
+                  </tr>
+                  <tr>
+                    <td rowspan="4">Delta Industries</td>
+                    <td>Rachel Adams</td>
+                    <td>rachel@909</td>
+                    <td rowspan="4">"sales_analysis_db" : "delta_industries_sales_analysis"</td>
+                    <td>nill</td>
+                  </tr>
+                  <tr>
+                    <td>James Wilson</td>
+                    <td>James@123</td>
+                    <td class="filter-param">user_guid = "6a9ec9a3-7fee-411b-85a9-f2e9e8d2e055"</td>
+                  </tr>
+                  <tr>
+                    <td>Olivia Martin</td>
+                    <td>olivia@5678</td>
+                    <td class="filter-param">user_guid = "7ea9d145-cda4-43a5-8c6f-6f68fc53aeb8"</td>
+                  </tr>
+                  <tr>
+                    <td>Robert Jones</td>
+                    <td>robert@1234</td>
+                    <td class="filter-param">user_guid = "1c43d130-077e-46c2-b50f-78c80bc747fa"</td>
+                  </tr>
+            </tbody>
+          </table>
       </div>
-    </div>
-    
-    <div class="button-container">
-      <button type="button" class="btn btn-primary show-popup-btn advanced-btn" (click)="openPopup()">
-    <span class="icon-container">
-      <i class="fas fa-project-diagram"></i>
-    </span>
-    Show Workflow Diagram
-  </button>
+      </div>
     </div>
   </div>
-  <hr class="divider">
-    <div class="small text-secondary mt-3 d-none d-sm-flex">
-      <div class="credentials" style="width: 100%;">
-        <div class="user-id-selection">
-          <label class="user-id-label">User ID :</label>
-          <div class="user-id-options">
-            <ejs-radiobutton label="GUID" name="UserID" value="guid" cssClass="e-info" (change)="onRadioChange($event)" checked="true"></ejs-radiobutton>
-            <ejs-radiobutton label="Email" name="UserID" value="email" cssClass="e-info" (change)="onRadioChange($event)"></ejs-radiobutton>
-            <ejs-radiobutton label="Region" name="UserID" value="region" cssClass="e-info" (change)="onRadioChange($event)"></ejs-radiobutton>
+  
+    <div class="parent-div">
+      <div class="user-id-selection">
+        <label class="user-id-label">User ID :</label>
+        <div class="user-id-options">
+          <ejs-radiobutton label="Region" name="UserID" value="region" cssClass="e-info" (change)="onRadioChange($event)" checked="true"></ejs-radiobutton>
+          <ejs-radiobutton label="GUID" name="UserID" value="guid" cssClass="e-info" (change)="onRadioChange($event)"></ejs-radiobutton>
+          <ejs-radiobutton label="Email" name="UserID" value="email" cssClass="e-info" (change)="onRadioChange($event)"></ejs-radiobutton>
+        </div>
+      </div>
+      <div class="child-div" >
+        <h2 class="login-header">Login</h2>
+        <p class="login-subtext">Please select a user to log in</p>
+        <form (ngSubmit)="onSubmit()">
+          <label for="useremail" class="user-label">User email</label>
+          <div style="margin-bottom: 8px;">
+            <ejs-combobox id='games' #sample [dataSource]='userData' [fields]='fields'  [(value)]="selectedUser" [popupHeight]='height' [placeholder]="'Select the User email address'" (change)="onUserChange($event)" [itemTemplate]='itemTemplate' [groupTemplate]="groupTemplate" [valueTemplate]='valueTemplate'></ejs-combobox>
+            <ng-template #itemTemplate let-data>
+              <div class="item-container">
+                <img class="empImage empImage-placeholder" src="./assets/{{data.username}}-min.jpg" alt="employee" />
+                <div class="username">{{ data.username }}</div>
+              </div>
+            </ng-template>
+            <ng-template #groupTemplate let-data>
+              <div class="group-header">
+                <strong class="tenant-name">{{ formatTenantName(data.usertenant) }}</strong>
+              </div>
+            </ng-template>
+            <ng-template #valueTemplate let-data>
+              <div class="value">
+                <img class="empImage" [src]="'./assets/' + data.username + '-min.jpg'" alt="employee" />
+                <span class="username">{{ data.username }}</span>
+              </div>
+            </ng-template>
+          </div>
+          <div class="form-group">
+            <label for="password" class="user-label">Password</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              [(ngModel)]="password"
+              required
+            />
+          </div>
+          <button type="submit" class="login-button">Login</button>
+        </form>
+        <div class="error-message" *ngIf="loginError">{{ loginError }}</div>
+        <div class="site-description">
+          <p>By leveraging the custom attribute in the embedding application, we have 4 set of database for each tenant and passing the filter access department-specific data. The Admin of each tenant gains insights of all data and other can access their specific data. Please refer the table for custom attributes and filter values.</p>
+        </div>
+        <div [class.hidden]="!showPopup" class="popup-overlay">
+          <div class="popup-content">
+            <button type="button" class="close-btn" (click)="closePopup()">✖</button>
+            <h3 class="popup-header">Flow Diagram - Custom Attribute</h3>
+            <img src="assets/custom-attribute-workflow.jpg" alt="Workflow Diagram" class="popup-image" />
           </div>
         </div>
         
-        <table>
-          <thead>
-            <tr>
-              <th rowspan="2">Tenants</th>
-              <th>User Email</th>
-              <th>Password</th>
-              <th>Custom Attribute</th>
-              <th style="min-width: 300px;">Filter Parameter</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td rowspan="4">Alpha Electronics</td>
-              <td>emily@alphaelectronics.com</td>
-              <td>emily@123</td>
-              <td rowspan="4">"sales_analysis_db" : "alpha_electronics_sales_analysis"</td>
-              <td>All</td>
-            </tr>
-            <tr>
-              <td>john@alphaelectronics.com</td>
-              <td>john@123</td>
-              <td class="filter-param">user_guid = "5a216f53-416c-46ba-805c-2724dd8c738c"</td>
-            </tr>
-            <tr>
-              <td>sarah@alphaelectronics.com</td>
-              <td>sarah@123</td>
-              <td class="filter-param">user_guid = "24265a26-320f-426a-9d30-f9db439e1363"</td>
-            </tr>
-            <tr>
-              <td>michel@alphaelectronics.com</td>
-              <td>michael@123</td>
-              <td class="filter-param">user_guid = "864f0a43-2235-4418-984e-7c1b0fea0a1a"</td>
-            </tr>
-              <tr>
-                <td rowspan="4">Beta Enterprises</td>
-                <td>david.miller@betaenterprises.com</td>
-                <td>David@202</td>
-                <td rowspan="4">"sales_analysis_db" : "beta_enterprises_sales_analysis"</td>
-                <td>All</td>
-              </tr>
-              <tr>
-                <td>lisa@betaenterprises.com</td>
-                <td>Lisa@303</td>
-                <td class="filter-param">user_guid = "526384c4-2b16-4fef-9a7a-e7203481c513"</td>
-              </tr>
-              <tr>
-                <td>chris@betaenterprises.com</td>
-                <td>chris.white@123</td>
-                <td class="filter-param">user_guid = "98accd79-8f09-4456-a2b8-ba981c4a99d4"</td>
-              </tr>
-              <tr>
-                <td>sophia@betaenterprises.com</td>
-                <td>Sophia@1213</td>
-                <td class="filter-param">user_guid = "b946e1ad-c611-40f0-bc66-13ca4689d7e2"</td>
-              </tr>
-                <tr>
-                  <td rowspan="4">Gamma Industries</td>
-                  <td>jessica@gammaindustries.com</td>
-                  <td>jessica@505</td>
-                  <td rowspan="4">"sales_analysis_db" : "gamma_industries_sales_analysis"</td>
-                  <td>All</td>
-                </tr>
-                <tr>
-                  <td>matthew@gammaindustries.com</td>
-                  <td>matthew@606</td>
-                  <td class="filter-param">user_guid = "aa116681-5c8c-4f8e-a87e-fb938ce9d743"</td>
-                </tr>
-                <tr>
-                  <td>amanda@gammaindustries.com</td>
-                  <td>amanda@707</td>
-                  <td class="filter-param">user_guid = "e39ab2a3-eccf-4141-a7ed-e175ede04440"</td>
-                </tr>
-                <tr>
-                  <td>kevin@gammaindustries.com</td>
-                  <td>kevin@808</td>
-                  <td class="filter-param">user_guid = "dd2de469-ad77-4f52-8d2a-41881152369c"</td>
-                </tr>
-                <tr>
-                  <td rowspan="4">Delta Industries</td>
-                  <td>rachel.adams@deltaindustries.com</td>
-                  <td>rachel@909</td>
-                  <td rowspan="4">"sales_analysis_db" : "delta_industries_sales_analysis"</td>
-                  <td>All</td>
-                </tr>
-                <tr>
-                  <td>james.wilson@deltaindustries.com</td>
-                  <td>James@123</td>
-                  <td class="filter-param">user_guid = "6a9ec9a3-7fee-411b-85a9-f2e9e8d2e055"</td>
-                </tr>
-                <tr>
-                  <td>olivia.martin@deltaindustries.com</td>
-                  <td>olivia@5678</td>
-                  <td class="filter-param">user_guid = "7ea9d145-cda4-43a5-8c6f-6f68fc53aeb8"</td>
-                </tr>
-                <tr>
-                  <td>robert.jones@deltaindustries.com</td>
-                  <td>robert@1234</td>
-                  <td class="filter-param">user_guid = "1c43d130-077e-46c2-b50f-78c80bc747fa"</td>
-                </tr>
-          </tbody>
-        </table>
+        <div class="button-container">
+          <button type="button" class="btn btn-primary show-popup-btn advanced-btn" (click)="openPopup()">
+        Show Workflow Diagram
+      </button>
+        </div>
       </div>
     </div>
+</div>
 </div>
 
   
