Revamped table, dropdown user list and some styles

--- a/Scenario Based Samples/AnonymousUser-Final/web-client/src/app/login/login.component.scss
+++ b/Scenario Based Samples/AnonymousUser-Final/web-client/src/app/login/login.component.scss
@@ -45,7 +45,7 @@
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #7F56D9;
   color: #fff;
   border: none;
   border-radius: 3px;
@@ -54,7 +54,7 @@
 }
 
 .login-button:hover {
-  background-color: #0056b3;
+  background-color: #9e76f8;
 }
 
 /* Error message (if needed) */
