--- a/Scenario Based Samples/AnonymousUser-Final/web-client/src/app/header/header.component.scss
+++ b/Scenario Based Samples/AnonymousUser-Final/web-client/src/app/header/header.component.scss
@@ -11,3 +11,47 @@
   .right-nav {
     margin-right: 16px;
   }
+
+  .info-icon {
+    cursor: pointer;
+    //margin-left: 5px;
+    font-size: 15px;
+}
+
+.description-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    z-index: 9999;
+    font-size: small;
+    border-radius: 5px;
+    height: auto;
+    top: 70%;
+    width: auto;
+    right: 1%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+    // display: none;
+    // position: absolute;
+    // background-color: white;
+    // border: 1px solid #ccc;
+    // padding: 8px;
+    // z-index: 100;
+    // font-size: small;
+    // border-radius: 5px;
+    // white-space: nowrap;
+    // box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+
+    // bottom: 100%; /* Tooltip appears above the icon */
+    // left: 50%;
+    // transform: translateX(-50%);
+    // min-width: 200px;
+    // max-width: 250px;
+    // word-wrap: break-word;
+}
+
+.info-icon:hover + .description-content {
+    display: block;
+}
